hphp/hack/test/typecheck/sealed/interface2.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

<<__Sealed(B::class)>>
interface A {}

final class B implements A {}
final class C implements A {}
